--- a/development-team-test/pom.xml
+++ b/development-team-test/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>development-team</artifactId>
+        <artifactId>abaryliuk-development-team</artifactId>
         <groupId>com.epam.brest.courses</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>development-team-model</artifactId>
+    <artifactId>development-team-test</artifactId>
 
 
 </project>
