--- a/development-team-dao/pom.xml
+++ b/development-team-dao/pom.xml
@@ -21,7 +21,8 @@
 
         <dependency>
             <groupId>com.epam.brest.courses</groupId>
-            <artifactId>department-management-test</artifactId>
+            <artifactId>development-team-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
