--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -4,4 +4,4 @@ PRO.sqlCountById=SELECT COUNT(*) FROM projects  WHERE projectId =:projectId
 PRO.sqlGetProjectById=SELECT * FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
 PRO.sqlCountByName=SELECT COUNT(*) FROM projects  WHERE description =:description 
-PRO.sqlDeleteById=set foreign_key_checks=0; DELETE FROM projects WHERE projectId = :projectId
+PRO.sqlDeleteById=set foreign_key_checks=0; DELETE FROM projects WHERE projectId = :projectId; set foreign_key_checks=1
