--- a/development-team-model/pom.xml
+++ b/development-team-model/pom.xml
@@ -12,4 +12,20 @@
     <artifactId>development-team-model</artifactId>
 
 
+<dependencies>
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>annotations</artifactId>
+        <version>3.0.1</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.1</version>
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
+
+
 </project>
