--- a/pom.xml
+++ b/pom.xml
@@ -345,7 +345,7 @@
                     <execution>
                         <id>validate</id>
                         <phase>validate</phase>
-                        <inherited>false</inherited>
+<!--                        <inherited>false</inherited>-->
                         <configuration>
                             <!--<configLocation>checkstyle.xml</configLocation>-->
                             <encoding>UTF-8</encoding>
