Work on the dao layer.

--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -1,5 +1,5 @@
 PRO.sqlGetAllProjects=SELECT projectId, description, dateAdded FROM projects p ORDER BY p.projectId
-PRO.sqlAdd=INSERT INTO projects ( description) VALUES (:description)
+PRO.sqlAdd=INSERT INTO projects ( description, dateAdded) VALUES (:description, :dateAdded)
 PRO.sqlCountById=SELECT COUNT(*) FROM projects  WHERE projectId =:projectId 
 PRO.sqlGetProjectById=SELECT * FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
