DaoDto methods with tests.

--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -3,10 +3,11 @@ PRO.sqlAdd=INSERT INTO projects ( description, dateAdded) VALUES (:description, 
 PRO.sqlCountById=SELECT COUNT(*) FROM projects  WHERE projectId =:projectId 
 PRO.sqlGetProjectById=SELECT * FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
-PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS Adddate, COUNT(*) AS CountOfDevelopers \
+PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS AddDate, COUNT(*) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
 PRO.sqlAddIntoProjectsDevelopers=INSERT INTO projects_developers ( projectId,developerId) VALUES (:projectId,:developerId)
 PRO.sqlAddDeveloperToProject=SELECT  d.firstName AS FirstName ,d.lastName AS LastName FROM projects_developers  pd  \
-  JOIN developers d ON d.developerId=pd.developerId where pd.projectId=1 ORDER BY pd.projectId ASC
+  JOIN developers d ON d.developerId=pd.developerId where pd.projectId=:projectId ORDER BY pd.projectId ASC
 PRO.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE developerId = :developerId
+PRO.sqlFindBetweenDate=select * from projects where dateAdded between :dateStart and :dateEnd ORDER BY dateAdded
