--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -1,7 +1,6 @@
 PRO.sqlGetAllProjects=SELECT projectId, description, dateAdded FROM projects p ORDER BY p.projectId
-PRO.sqlAdd=INSERT INTO projects ( description, dateAdded) VALUES (:description, :dateAdded)
-PRO.sqlCountById=SELECT COUNT(*) FROM projects  WHERE projectId =:projectId 
-PRO.sqlGetProjectById=SELECT * FROM projects WHERE projectId = :projectId
+PRO.sqlAdd=INSERT INTO projects (description, dateAdded) VALUES (:description, :dateAdded)
+PRO.sqlGetProjectById=SELECT projectId, description, dateAdded FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
 PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS AddDate, COUNT(*) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
@@ -10,4 +9,9 @@ PRO.sqlAddIntoProjectsDevelopers=INSERT INTO projects_developers ( projectId,dev
 PRO.sqlAddDeveloperToProject=SELECT  d.firstName AS FirstName ,d.lastName AS LastName FROM projects_developers  pd  \
   JOIN developers d ON d.developerId=pd.developerId where pd.projectId=:projectId ORDER BY pd.projectId ASC
 PRO.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE developerId = :developerId
-PRO.sqlFindBetweenDate=select * from projects where dateAdded between :dateStart and :dateEnd ORDER BY dateAdded
+PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
+DEV.sqlGetAllDevelopers=SELECT developerId, firstName, lastName FROM developers d ORDER BY d.developerId
+DEV.sqlAdd=INSERT INTO developers (firstName, lastName) VALUES (:firstName, :lastName)
+DEV.sqlGetDeveloperById=SELECT developerId, firstName, lastName FROM developers WHERE developerId = :developerId
+DEV.sqlUpdate=UPDATE developers SET firstName=:firstName, lastName = :lastName WHERE developerId = :developerId
+DEV.sqlDeleteById= DELETE FROM developers WHERE developerId = :developerId
