--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -2,7 +2,7 @@ PRO.sqlGetAllProjects=SELECT projectId, description, dateAdded FROM projects p O
 PRO.sqlAdd=INSERT INTO projects (description, dateAdded) VALUES (:description, :dateAdded)
 PRO.sqlGetProjectById=SELECT projectId, description, dateAdded FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
-PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded, COUNT(*) AS CountOfDevelopers \
+PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(*) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
 PRO.sqlAddIntoProjectsDevelopers=INSERT INTO projects_developers ( projectId,developerId) VALUES (:projectId,:developerId)
