--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>development-team-service-api</module>
         <module>development-team-service</module>
         <module>development-team-rest-app</module>
+        <module>development-team-web-app</module>
     </modules>
 
 
@@ -67,6 +68,12 @@
             <dependency>
                 <groupId>com.epam.brest.courses</groupId>
                 <artifactId>development-team-rest-app</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.epam.brest.courses</groupId>
+                <artifactId>development-team-web-app</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
