--- a/development-team-model/pom.xml
+++ b/development-team-model/pom.xml
@@ -32,6 +32,10 @@
         <version>3.0.1</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+    </dependency>
 
 </dependencies>
 
