Additional methods for the developer list with tests.

--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -5,10 +5,11 @@ PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdd
 PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(*) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
-PRO.sqlAddIntoProjectsDevelopers=INSERT INTO projects_developers ( projectId,developerId) VALUES (:projectId,:developerId)
-PRO.sqlAddDeveloperToProject=SELECT  d.firstName AS FirstName ,d.lastName AS LastName FROM projects_developers  pd  \
+DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE developerId = :developerId
+DEV.sqlAddDeveloperToProjectsDevelopers=set foreign_key_checks=0;INSERT INTO projects_developers ( projectId,developerId)\
+   VALUES (:projectId,:developerId);set foreign_key_checks=1
+DEV.sqlSelectDeveloperFromProjectsDevelopers=SELECT  d.firstName AS FirstName ,d.lastName AS LastName FROM projects_developers  pd  \
   JOIN developers d ON d.developerId=pd.developerId where pd.projectId=:projectId ORDER BY pd.projectId ASC
-PRO.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE developerId = :developerId
 PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
 DEV.sqlGetAllDevelopers=SELECT developerId, firstName, lastName FROM developers d ORDER BY d.developerId
 DEV.sqlAdd=INSERT INTO developers (firstName, lastName) VALUES (:firstName, :lastName)
