--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -2,13 +2,13 @@ PRO.sqlGetAllProjects=SELECT projectId, description, dateAdded FROM projects p O
 PRO.sqlAdd=INSERT INTO projects (description, dateAdded) VALUES (:description, :dateAdded)
 PRO.sqlGetProjectById=SELECT projectId, description, dateAdded FROM projects WHERE projectId = :projectId
 PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdded WHERE projectId = :projectId
-PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(*) AS CountOfDevelopers \
+PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(developerId) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
-DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE developerId = :developerId
+DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE projectId=:projectId AND developerId = :developerId
 DEV.sqlAddDeveloperToProjectsDevelopers=set foreign_key_checks=0;INSERT INTO projects_developers ( projectId,developerId)\
    VALUES (:projectId,:developerId);set foreign_key_checks=1
-DEV.sqlSelectDeveloperFromProjectsDevelopers=SELECT  d.firstName AS FirstName ,d.lastName AS LastName FROM projects_developers  pd  \
+DEV.sqlSelectDeveloperFromProjectsDevelopers=SELECT  d.firstName AS FirstName ,d.lastName AS LastName, d.developerId AS DeveloperId FROM projects_developers  pd  \
   JOIN developers d ON d.developerId=pd.developerId where pd.projectId=:projectId ORDER BY pd.projectId ASC
 PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
 DEV.sqlGetAllDevelopers=SELECT developerId, firstName, lastName FROM developers d ORDER BY d.developerId
