UI developer's part.

--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -9,10 +9,11 @@ DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE project
 DEV.sqlAddDeveloperToProjectsDevelopers=set foreign_key_checks=0;INSERT INTO projects_developers ( projectId,developerId)\
    VALUES (:projectId,:developerId);set foreign_key_checks=1
 DEV.sqlSelectDeveloperFromProjectsDevelopers=SELECT  d.firstName AS FirstName ,d.lastName AS LastName, d.developerId AS DeveloperId FROM projects_developers  pd  \
-  JOIN developers d ON d.developerId=pd.developerId where pd.projectId=:projectId ORDER BY pd.projectId ASC
+  JOIN developers d ON d.developerId=pd.developerId WHERE pd.projectId=:projectId ORDER BY pd.projectId ASC
 PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
 DEV.sqlGetAllDevelopers=SELECT developerId, firstName, lastName FROM developers d ORDER BY d.developerId
 DEV.sqlAdd=INSERT INTO developers (firstName, lastName) VALUES (:firstName, :lastName)
 DEV.sqlGetDeveloperById=SELECT developerId, firstName, lastName FROM developers WHERE developerId = :developerId
 DEV.sqlUpdate=UPDATE developers SET firstName=:firstName, lastName = :lastName WHERE developerId = :developerId
 DEV.sqlDeleteById= DELETE FROM developers WHERE developerId = :developerId
+DEV.sqlFindByIdFromProject_Developers=SELECT projectId, developerId FROM projects_developers WHERE projectId = :projectId AND developerId = :developerId
