--- a/development-team-model/pom.xml
+++ b/development-team-model/pom.xml
@@ -15,8 +15,9 @@
 <dependencies>
 
     <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>2.8.8</version>
     </dependency>
 
     <dependency>
