--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -5,12 +5,14 @@ PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdd
 PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(developerId) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
+PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
+PRO.sqlCountOfDescription=SELECT count(projectId) FROM projects WHERE lower(description) = lower(:description)
 DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE projectId=:projectId AND developerId = :developerId
 DEV.sqlAddDeveloperToProjectsDevelopers=set foreign_key_checks=0;INSERT INTO projects_developers ( projectId,developerId)\
    VALUES (:projectId,:developerId);set foreign_key_checks=1
 DEV.sqlSelectDeveloperFromProjectsDevelopers=SELECT  d.firstName AS FirstName ,d.lastName AS LastName, d.developerId AS DeveloperId FROM projects_developers  pd  \
   JOIN developers d ON d.developerId=pd.developerId WHERE pd.projectId=:projectId ORDER BY pd.projectId ASC
-PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
+
 DEV.sqlGetAllDevelopers=SELECT developerId, firstName, lastName FROM developers d ORDER BY d.developerId
 DEV.sqlAdd=INSERT INTO developers (firstName, lastName) VALUES (:firstName, :lastName)
 DEV.sqlGetDeveloperById=SELECT developerId, firstName, lastName FROM developers WHERE developerId = :developerId
