--- a/development-team-web-app/pom.xml
+++ b/development-team-web-app/pom.xml
@@ -77,7 +77,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.10.3</version>
+        </dependency>
         <!--tests-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
