--- a/development-team-web-app/pom.xml
+++ b/development-team-web-app/pom.xml
@@ -37,6 +37,11 @@
 
         <dependency>
             <groupId>com.epam.brest.courses</groupId>
+            <artifactId>development-team-service-rest</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.epam.brest.courses</groupId>
             <artifactId>development-team-test</artifactId>
         </dependency>
 
@@ -65,6 +70,19 @@
             <artifactId>validation-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
