Web-app.Projects tests.

--- a/development-team-dao/src/main/resources/sql-development-team.properties
+++ b/development-team-dao/src/main/resources/sql-development-team.properties
@@ -5,7 +5,8 @@ PRO.sqlUpdate=UPDATE projects SET description=:description, dateAdded = :dateAdd
 PRO.sqlCountOfDevelopers= SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(developerId) AS CountOfDevelopers \
   FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId GROUP BY p.projectId 
 PRO.sqlDeleteById= DELETE FROM projects WHERE projectId = :projectId
-PRO.sqlFindBetweenDate=SELECT projectId, description, dateAdded FROM projects WHERE dateAdded BETWEEN :dateStart AND :dateEnd ORDER BY dateAdded
+PRO.sqlFindBetweenDate=SELECT p.projectId AS ProjectId , p.dateAdded AS DateAdded,p.description AS Description, COUNT(developerId) AS CountOfDevelopers   \
+  FROM projects p LEFT JOIN projects_developers  pd ON p.projectId = pd.projectId  WHERE p.dateAdded BETWEEN :dateStart AND :dateEnd GROUP BY p.projectId
 PRO.sqlCountOfDescription=SELECT count(projectId) FROM projects WHERE lower(description) = lower(:description)
 DEV.sqlDeleteFromProjectDevelopers=DELETE FROM projects_developers WHERE projectId=:projectId AND developerId = :developerId
 DEV.sqlAddDeveloperToProjectsDevelopers=set foreign_key_checks=0;INSERT INTO projects_developers ( projectId,developerId)\
