--- a/development-team-web-app/pom.xml
+++ b/development-team-web-app/pom.xml
@@ -120,7 +120,53 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>tomcat</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>DT</name>
+                    <value>tomcat</value>
+                </property>
+            </activation>
+            <properties>
+                <port>8080</port>
+                <point.projects>rest_app_DT/projects</point.projects>
+                <point.projectsDto>rest_app_DT/projectsDto</point.projectsDto>
+                <point.developers>rest_app_DT/developers</point.developers>
+                <point.projects_developers>rest_app_DT/projects_developers</point.projects_developers>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>jetty</id>
+            <activation>
+                <property>
+                    <name>DT</name>
+                    <value>jetty</value>
+                </property>
+            </activation>
+            <properties>
+                <port>8088</port>
+                <point.projects>jetty_rest/projects</point.projects>
+                <point.projectsDto>jetty_rest/projectsDto</point.projectsDto>
+                <point.developers>jetty_rest/developers</point.developers>
+                <point.projects_developers>jetty_rest/projects_developers</point.projects_developers>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
+        <finalName>web_app_DT</finalName>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+
+        </resources>
         <plugins>
             <!-- Embedded Jetty HTTP Server for testing web application -->
             <plugin>
@@ -129,7 +175,7 @@
                 <configuration>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>/abaryliuk-development-team</contextPath>
                     </webApp>
                     <httpConnector>
                         <port>8080</port>
