--- a/development-team-web-app/src/main/resources/application.properties
+++ b/development-team-web-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 protocol=http
 host=localhost
-port=8088
-point.projects=projects
-point.projectsDto=projectsDto
-point.developers=developers
-point.projects_developers=projects_developers
+port=${port}
+point.projects=${point.projects}
+point.projectsDto=${point.projectsDto}
+point.developers=${point.developers}
+point.projects_developers=${point.projects_developers}
